--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/localizations": "^2.6.0",
+    "@clerk/nextjs": "^5.3.2",
     "next": "14.2.5",
     "next-intl": "^3.17.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "rtl-detect": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/rtl-detect": "^1.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
