--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/rtl-detect": "^1.0.3",
     "next": "14.2.5",
     "next-intl": "^3.17.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "rtl-detect": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
